--- a/invoicing_app/templates/declaration_template.html
+++ b/invoicing_app/templates/declaration_template.html
@@ -1,11 +1,9 @@
 <html>
 	<body>
-		<h1>Generate Tax Recepits</h1>
+		<h1>Declared Tax Receipts</h1>
 		<p>Here is the report from period the {{ period }} :</p>
 		<p>Country: {{ country }}</p>
-		<p>Number of events: {{ count_id }}</p>
-        <p>GTS: {{ gts }}</p>
-        <p>GTF: {{ gtf }}</p>
+        <p>DECLARED GTF: {{ declared_gtf }}</p>
 		<p>Thanks!</p>
 	</body>
 </html>
